test/error/E38.chimod
{
  "has_c_support": false
}
